--- a/Prototyping_for_closest_neighbour.ipynb
+++ b/Prototyping_for_closest_neighbour.ipynb
@@ -18,8 +18,10 @@
    "outputs": [],
    "source": [
     "# the papersapce version\n",
+    "data_dir_0 = '/home/paperspace/projects/news_exploration/Data/training_data/period0/'\n",
     "data_dir_1 = '/home/paperspace/projects/news_exploration/Data/training_data/period1/'\n",
-    "data_dir_0 = '/home/paperspace/projects/news_exploration/Data/training_data/period0/'"
+    "data_dir_2 = '/home/paperspace/projects/news_exploration/Data/training_data/period2/'\n",
+    "data_dir_3 = '/home/paperspace/projects/news_exploration/Data/training_data/period3/'"
    ]
   },
   {
@@ -129,7 +131,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/ruoyangzhang/Documents/PythonWorkingDirectory/news_exploration/News_data_exploration/neighbourhood.py:17: RuntimeWarning: invalid value encountered in true_divide\n",
+      "/home/paperspace/projects/news_exploration/News_data_exploration/neighbourhood.py:17: RuntimeWarning: invalid value encountered in true_divide\n",
       "  self.n_idx2vec = self.idx2vec/l2_norm\n"
      ]
     }
@@ -147,16 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "word = 'good'"
+    "word = 'referendum'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -176,29 +178,29 @@
     {
      "data": {
       "text/plain": [
-       "[('nothing', 0.9994965195655823),\n",
-       " ('ve', 0.9994886517524719),\n",
-       " ('something', 0.9994208812713623),\n",
-       " ('should', 0.9994068145751953),\n",
-       " ('hard', 0.9993849992752075),\n",
-       " ('always', 0.9993712902069092),\n",
-       " ('better', 0.9993569254875183),\n",
-       " ('done', 0.9993535876274109),\n",
-       " ('make', 0.9993394613265991),\n",
-       " ('need', 0.9993332028388977),\n",
-       " ('anyone', 0.9993313550949097),\n",
-       " ('doing', 0.9993266463279724),\n",
-       " ('never', 0.9992914199829102),\n",
-       " ('very', 0.999283492565155),\n",
-       " ('saying', 0.9992535710334778),\n",
-       " ('let', 0.9992479085922241),\n",
-       " ('thought', 0.9992431402206421),\n",
-       " ('now', 0.9992291927337646),\n",
-       " ('feel', 0.9992141723632812),\n",
-       " ('just', 0.9992006421089172)]"
+       "[('european_union', 0.87031692266464233),\n",
+       " ('britons', 0.83396273851394653),\n",
+       " ('june_23', 0.82871079444885254),\n",
+       " ('stay', 0.80684906244277954),\n",
+       " ('shaping', 0.80064314603805542),\n",
+       " ('leave', 0.79809200763702393),\n",
+       " ('vote', 0.79619282484054565),\n",
+       " ('shaken', 0.79517322778701782),\n",
+       " ('exit', 0.78478610515594482),\n",
+       " ('uk', 0.77786511182785034),\n",
+       " ('bloc', 0.77523589134216309),\n",
+       " ('remain', 0.77400869131088257),\n",
+       " ('1978', 0.77395153045654297),\n",
+       " ('northern_ireland', 0.77386939525604248),\n",
+       " ('membership', 0.76935958862304688),\n",
+       " ('britain', 0.76933705806732178),\n",
+       " ('united_kingdom', 0.76922607421875),\n",
+       " ('pound', 0.76863318681716919),\n",
+       " ('polls', 0.75292813777923584),\n",
+       " ('camp', 0.75130194425582886)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,35 +211,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('delay', 0.9994755983352661),\n",
-       " ('done', 0.9994615912437439),\n",
-       " ('thought', 0.9994599223136902),\n",
-       " ('ve_got', 0.999438464641571),\n",
-       " ('make', 0.9993642568588257),\n",
-       " ('doing', 0.9993554949760437),\n",
-       " ('always', 0.9993485808372498),\n",
-       " ('never', 0.9993394613265991),\n",
-       " ('lose', 0.9993147253990173),\n",
-       " ('anymore', 0.999313473701477),\n",
-       " ('enough', 0.9992997050285339),\n",
-       " ('ask', 0.9992974996566772),\n",
-       " ('hard', 0.9992954730987549),\n",
-       " ('nothing', 0.9992933869361877),\n",
-       " ('should', 0.9992831945419312),\n",
-       " ('let', 0.9992173910140991),\n",
-       " ('mean', 0.9992027282714844),\n",
-       " ('wouldn_t', 0.9991599321365356),\n",
-       " ('ms_leggero', 0.9991535544395447),\n",
-       " ('find', 0.9991488456726074)]"
+       "[('european_union', 0.85870695114135742),\n",
+       " ('britons', 0.83748865127563477),\n",
+       " ('vote', 0.79487526416778564),\n",
+       " ('stay', 0.7875019907951355),\n",
+       " ('united_kingdom', 0.78078842163085938),\n",
+       " ('shaping', 0.7799304723739624),\n",
+       " ('uk', 0.77531373500823975),\n",
+       " ('exit', 0.77498972415924072),\n",
+       " ('june_23', 0.77422106266021729),\n",
+       " ('membership', 0.77323061227798462),\n",
+       " ('leave', 0.77223074436187744),\n",
+       " ('northern_ireland', 0.77075099945068359),\n",
+       " ('britain', 0.7694130539894104),\n",
+       " ('bloc', 0.75891327857971191),\n",
+       " ('pound', 0.74455296993255615),\n",
+       " ('remain', 0.74279731512069702),\n",
+       " ('debate', 0.73612791299819946),\n",
+       " ('approval', 0.73606526851654053),\n",
+       " ('shaken', 0.73454493284225464),\n",
+       " ('polls', 0.73322254419326782)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,35 +250,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('always', 0.9995263814926147),\n",
-       " ('let', 0.9995176792144775),\n",
-       " ('doing', 0.9994218349456787),\n",
-       " ('wouldn_t', 0.999417245388031),\n",
-       " ('nothing', 0.9993872046470642),\n",
-       " ('ask', 0.9993675351142883),\n",
-       " ('ve_got', 0.9993585348129272),\n",
-       " ('done', 0.9993571043014526),\n",
-       " ('thought', 0.9993331432342529),\n",
-       " ('prioritize', 0.9992806315422058),\n",
-       " ('lam', 0.9992740154266357),\n",
-       " ('thank', 0.9992339611053467),\n",
-       " ('hard', 0.999172568321228),\n",
-       " ('should', 0.9991365671157837),\n",
-       " ('enough', 0.99908846616745),\n",
-       " ('just', 0.9990870952606201),\n",
-       " ('love', 0.9990602731704712),\n",
-       " ('why', 0.9989979267120361),\n",
-       " ('find', 0.9989563226699829),\n",
-       " ('never', 0.9989539980888367)]"
+       "[('european_union', 0.86308455467224121),\n",
+       " ('britons', 0.84405744075775146),\n",
+       " ('united_kingdom', 0.81021547317504883),\n",
+       " ('membership', 0.78758156299591064),\n",
+       " ('uk', 0.78730744123458862),\n",
+       " ('vote', 0.78497278690338135),\n",
+       " ('bloc', 0.78426390886306763),\n",
+       " ('stay', 0.77976757287979126),\n",
+       " ('exit', 0.77460247278213501),\n",
+       " ('britain', 0.77345949411392212),\n",
+       " ('leave', 0.7598726749420166),\n",
+       " ('northern_ireland', 0.75360333919525146),\n",
+       " ('pound', 0.75247997045516968),\n",
+       " ('debate', 0.74067103862762451),\n",
+       " ('remain', 0.7354508638381958),\n",
+       " ('1549', 0.7353091835975647),\n",
+       " ('stays', 0.73399049043655396),\n",
+       " ('polls', 0.73371309041976929),\n",
+       " ('june_23', 0.73234003782272339),\n",
+       " ('approval', 0.72891157865524292)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,35 +289,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('crazy', 0.999465823173523),\n",
-       " ('else', 0.9994634389877319),\n",
-       " ('always', 0.9994583129882812),\n",
-       " ('thank', 0.999431312084198),\n",
-       " ('nothing', 0.9994200468063354),\n",
-       " ('wouldn_t', 0.999374508857727),\n",
-       " ('couldn_t', 0.9993047118186951),\n",
-       " ('guess', 0.9992933869361877),\n",
-       " ('hard', 0.9992126822471619),\n",
-       " ('done', 0.9991986751556396),\n",
-       " ('love', 0.9991747736930847),\n",
-       " ('mischel', 0.9991742372512817),\n",
-       " ('knows', 0.9991441369056702),\n",
-       " ('ask', 0.9990262985229492),\n",
-       " ('wanted', 0.9989562034606934),\n",
-       " ('anyone', 0.9989392757415771),\n",
-       " ('never', 0.9989263415336609),\n",
-       " ('thing', 0.9989229440689087),\n",
-       " ('exactly', 0.9989117980003357),\n",
-       " ('flexible', 0.9989096522331238)]"
+       "[('european_union', 0.84626007080078125),\n",
+       " ('britons', 0.82399404048919678),\n",
+       " ('united_kingdom', 0.80262017250061035),\n",
+       " ('membership', 0.78220409154891968),\n",
+       " ('uk', 0.78134602308273315),\n",
+       " ('bloc', 0.76987349987030029),\n",
+       " ('vote', 0.76325368881225586),\n",
+       " ('stay', 0.76076310873031616),\n",
+       " ('exit', 0.75858134031295776),\n",
+       " ('britain', 0.74882680177688599),\n",
+       " ('northern_ireland', 0.73381876945495605),\n",
+       " ('leave', 0.7328067421913147),\n",
+       " ('stays', 0.73267644643783569),\n",
+       " ('pound', 0.72344100475311279),\n",
+       " ('polls', 0.71427822113037109),\n",
+       " ('debate', 0.71146035194396973),\n",
+       " ('currency', 0.71119964122772217),\n",
+       " ('upcoming', 0.71107113361358643),\n",
+       " ('remain', 0.70773535966873169),\n",
+       " ('approval', 0.70627260208129883)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,27 +328,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "top10_0 = set([pair[0] for pair in test0.neighbours])\n",
     "top10_1 = set([pair[0] for pair in test1.neighbours])\n",
-    "top10_2 = set([pair[0] for pair in test2.neighbours])"
+    "top10_2 = set([pair[0] for pair in test2.neighbours])\n",
+    "top10_3 = set([pair[0] for pair in test3.neighbours])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'debate', 'lead', 'thursday', 'win'}"
+       "{'1978', 'camp'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,16 +360,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'britons', 'tomorrow', 'u_k', 'united_kingdom'}"
+       "{'approval', 'debate'}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,16 +380,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ahead', 'independence', 'tomorrow'}"
+       "{'shaken', 'shaping'}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,22 +400,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'debate', 'voted', 'win'}"
+       "{'1549', 'stays'}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "top10_2 - top10_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1549', 'june_23'}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top10_2 - top10_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'currency', 'upcoming'}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top10_3 - top10_2"
    ]
   },
   {
