--- a/Prototyping_for_closest_neighbour.ipynb
+++ b/Prototyping_for_closest_neighbour.ipynb
@@ -178,26 +178,26 @@
     {
      "data": {
       "text/plain": [
-       "[('european_union', 0.87031692266464233),\n",
-       " ('britons', 0.83396273851394653),\n",
-       " ('june_23', 0.82871079444885254),\n",
-       " ('stay', 0.80684906244277954),\n",
-       " ('shaping', 0.80064314603805542),\n",
-       " ('leave', 0.79809200763702393),\n",
-       " ('vote', 0.79619282484054565),\n",
-       " ('shaken', 0.79517322778701782),\n",
-       " ('exit', 0.78478610515594482),\n",
-       " ('uk', 0.77786511182785034),\n",
-       " ('bloc', 0.77523589134216309),\n",
-       " ('remain', 0.77400869131088257),\n",
-       " ('1978', 0.77395153045654297),\n",
-       " ('northern_ireland', 0.77386939525604248),\n",
-       " ('membership', 0.76935958862304688),\n",
-       " ('britain', 0.76933705806732178),\n",
-       " ('united_kingdom', 0.76922607421875),\n",
-       " ('pound', 0.76863318681716919),\n",
-       " ('polls', 0.75292813777923584),\n",
-       " ('camp', 0.75130194425582886)]"
+       "[('european_union', 0.86763375997543335),\n",
+       " ('june_23', 0.83996367454528809),\n",
+       " ('britons', 0.83456188440322876),\n",
+       " ('stay', 0.82405900955200195),\n",
+       " ('shaken', 0.80033522844314575),\n",
+       " ('shaping', 0.79411375522613525),\n",
+       " ('exit', 0.78977024555206299),\n",
+       " ('bloc', 0.78975516557693481),\n",
+       " ('membership', 0.7868688702583313),\n",
+       " ('remain', 0.78408235311508179),\n",
+       " ('vote', 0.78050339221954346),\n",
+       " ('united_kingdom', 0.77900832891464233),\n",
+       " ('1978', 0.77883338928222656),\n",
+       " ('uk', 0.77677375078201294),\n",
+       " ('northern_ireland', 0.77580446004867554),\n",
+       " ('leave', 0.77256971597671509),\n",
+       " ('trigger', 0.77011978626251221),\n",
+       " ('approval', 0.76987224817276001),\n",
+       " ('britain', 0.7577473521232605),\n",
+       " ('polls', 0.75637781620025635)]"
       ]
      },
      "execution_count": 7,
@@ -217,26 +217,26 @@
     {
      "data": {
       "text/plain": [
-       "[('european_union', 0.85870695114135742),\n",
-       " ('britons', 0.83748865127563477),\n",
-       " ('vote', 0.79487526416778564),\n",
-       " ('stay', 0.7875019907951355),\n",
-       " ('united_kingdom', 0.78078842163085938),\n",
-       " ('shaping', 0.7799304723739624),\n",
-       " ('uk', 0.77531373500823975),\n",
-       " ('exit', 0.77498972415924072),\n",
-       " ('june_23', 0.77422106266021729),\n",
-       " ('membership', 0.77323061227798462),\n",
-       " ('leave', 0.77223074436187744),\n",
-       " ('northern_ireland', 0.77075099945068359),\n",
-       " ('britain', 0.7694130539894104),\n",
-       " ('bloc', 0.75891327857971191),\n",
-       " ('pound', 0.74455296993255615),\n",
-       " ('remain', 0.74279731512069702),\n",
-       " ('debate', 0.73612791299819946),\n",
-       " ('approval', 0.73606526851654053),\n",
-       " ('shaken', 0.73454493284225464),\n",
-       " ('polls', 0.73322254419326782)]"
+       "[('european_union', 0.85775500535964966),\n",
+       " ('britons', 0.83517581224441528),\n",
+       " ('stay', 0.80517792701721191),\n",
+       " ('june_23', 0.80334353446960449),\n",
+       " ('united_kingdom', 0.79602730274200439),\n",
+       " ('exit', 0.78554463386535645),\n",
+       " ('membership', 0.78364813327789307),\n",
+       " ('northern_ireland', 0.77776873111724854),\n",
+       " ('bloc', 0.77466422319412231),\n",
+       " ('vote', 0.77371776103973389),\n",
+       " ('uk', 0.77125626802444458),\n",
+       " ('shaping', 0.76772713661193848),\n",
+       " ('remain', 0.76072311401367188),\n",
+       " ('approval', 0.75400269031524658),\n",
+       " ('britain', 0.75202137231826782),\n",
+       " ('shaken', 0.74728482961654663),\n",
+       " ('trigger', 0.7464219331741333),\n",
+       " ('leave', 0.74586814641952515),\n",
+       " ('polls', 0.74411290884017944),\n",
+       " ('voting', 0.73692715167999268)]"
       ]
      },
      "execution_count": 8,
@@ -256,26 +256,26 @@
     {
      "data": {
       "text/plain": [
-       "[('european_union', 0.86308455467224121),\n",
-       " ('britons', 0.84405744075775146),\n",
-       " ('united_kingdom', 0.81021547317504883),\n",
-       " ('membership', 0.78758156299591064),\n",
-       " ('uk', 0.78730744123458862),\n",
-       " ('vote', 0.78497278690338135),\n",
-       " ('bloc', 0.78426390886306763),\n",
-       " ('stay', 0.77976757287979126),\n",
-       " ('exit', 0.77460247278213501),\n",
-       " ('britain', 0.77345949411392212),\n",
-       " ('leave', 0.7598726749420166),\n",
-       " ('northern_ireland', 0.75360333919525146),\n",
-       " ('pound', 0.75247997045516968),\n",
-       " ('debate', 0.74067103862762451),\n",
-       " ('remain', 0.7354508638381958),\n",
-       " ('1549', 0.7353091835975647),\n",
-       " ('stays', 0.73399049043655396),\n",
-       " ('polls', 0.73371309041976929),\n",
-       " ('june_23', 0.73234003782272339),\n",
-       " ('approval', 0.72891157865524292)]"
+       "[('european_union', 0.86320596933364868),\n",
+       " ('britons', 0.84013098478317261),\n",
+       " ('united_kingdom', 0.81545460224151611),\n",
+       " ('membership', 0.80018967390060425),\n",
+       " ('bloc', 0.79363536834716797),\n",
+       " ('stay', 0.7923513650894165),\n",
+       " ('uk', 0.77836912870407104),\n",
+       " ('exit', 0.77787518501281738),\n",
+       " ('northern_ireland', 0.76963436603546143),\n",
+       " ('1549', 0.76177924871444702),\n",
+       " ('vote', 0.75969606637954712),\n",
+       " ('britain', 0.75879514217376709),\n",
+       " ('stays', 0.74973815679550171),\n",
+       " ('june_23', 0.74837762117385864),\n",
+       " ('remain', 0.7475278377532959),\n",
+       " ('polls', 0.74027395248413086),\n",
+       " ('approval', 0.7383762001991272),\n",
+       " ('leave', 0.73801034688949585),\n",
+       " ('nationalist', 0.73661643266677856),\n",
+       " ('voter_registration', 0.73387134075164795)]"
       ]
      },
      "execution_count": 9,
@@ -295,26 +295,26 @@
     {
      "data": {
       "text/plain": [
-       "[('european_union', 0.84626007080078125),\n",
-       " ('britons', 0.82399404048919678),\n",
-       " ('united_kingdom', 0.80262017250061035),\n",
-       " ('membership', 0.78220409154891968),\n",
-       " ('uk', 0.78134602308273315),\n",
-       " ('bloc', 0.76987349987030029),\n",
-       " ('vote', 0.76325368881225586),\n",
-       " ('stay', 0.76076310873031616),\n",
-       " ('exit', 0.75858134031295776),\n",
-       " ('britain', 0.74882680177688599),\n",
-       " ('northern_ireland', 0.73381876945495605),\n",
-       " ('leave', 0.7328067421913147),\n",
-       " ('stays', 0.73267644643783569),\n",
-       " ('pound', 0.72344100475311279),\n",
-       " ('polls', 0.71427822113037109),\n",
-       " ('debate', 0.71146035194396973),\n",
-       " ('currency', 0.71119964122772217),\n",
-       " ('upcoming', 0.71107113361358643),\n",
-       " ('remain', 0.70773535966873169),\n",
-       " ('approval', 0.70627260208129883)]"
+       "[('european_union', 0.85645747184753418),\n",
+       " ('britons', 0.83902382850646973),\n",
+       " ('united_kingdom', 0.81603479385375977),\n",
+       " ('membership', 0.80212104320526123),\n",
+       " ('bloc', 0.78547650575637817),\n",
+       " ('stay', 0.78099095821380615),\n",
+       " ('uk', 0.7738301157951355),\n",
+       " ('exit', 0.77140307426452637),\n",
+       " ('northern_ireland', 0.76139438152313232),\n",
+       " ('stays', 0.76025241613388062),\n",
+       " ('vote', 0.75638312101364136),\n",
+       " ('nationalist', 0.74283701181411743),\n",
+       " ('britain', 0.7401735782623291),\n",
+       " ('polls', 0.74010860919952393),\n",
+       " ('remain', 0.73890769481658936),\n",
+       " ('momentum', 0.73326891660690308),\n",
+       " ('voter_registration', 0.73149877786636353),\n",
+       " ('approval', 0.72347962856292725),\n",
+       " ('voting', 0.72335195541381836),\n",
+       " ('leave', 0.72317498922348022)]"
       ]
      },
      "execution_count": 10,
