--- a/Prototyping_for_closest_neighbour.ipynb
+++ b/Prototyping_for_closest_neighbour.ipynb
@@ -18,8 +18,10 @@
    "outputs": [],
    "source": [
     "# the papersapce version\n",
+    "data_dir_0 = '/home/paperspace/projects/news_exploration/Data/training_data/period0/'\n",
     "data_dir_1 = '/home/paperspace/projects/news_exploration/Data/training_data/period1/'\n",
-    "data_dir_0 = '/home/paperspace/projects/news_exploration/Data/training_data/period0/'"
+    "data_dir_2 = '/home/paperspace/projects/news_exploration/Data/training_data/period2/'\n",
+    "data_dir_3 = '/home/paperspace/projects/news_exploration/Data/training_data/period3/'"
    ]
   },
   {
@@ -129,7 +131,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/ruoyangzhang/Documents/PythonWorkingDirectory/news_exploration/News_data_exploration/neighbourhood.py:17: RuntimeWarning: invalid value encountered in true_divide\n",
+      "/home/paperspace/projects/news_exploration/News_data_exploration/neighbourhood.py:17: RuntimeWarning: invalid value encountered in true_divide\n",
       "  self.n_idx2vec = self.idx2vec/l2_norm\n"
      ]
     }
@@ -147,58 +149,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "word = 'referendum'"
+    "word = 'brexit'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test0.closest_neighbours(word, n = 20, normalised = True)\n",
-    "test1.closest_neighbours(word, n = 20, normalised = True)\n",
-    "test2.closest_neighbours(word, n = 20, normalised = True)\n",
-    "test3.closest_neighbours(word, n = 20, normalised = True)"
+    "test0.closest_neighbours(word, n = 30, normalised = True)\n",
+    "test1.closest_neighbours(word, n = 30, normalised = True)\n",
+    "test2.closest_neighbours(word, n = 30, normalised = True)\n",
+    "test3.closest_neighbours(word, n = 30, normalised = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('exit', 0.9693004488945007),\n",
-       " ('bloc', 0.9667661786079407),\n",
-       " ('issue', 0.9609473347663879),\n",
-       " ('membership', 0.9569995999336243),\n",
-       " ('debate', 0.9566793441772461),\n",
-       " ('remain', 0.956550121307373),\n",
-       " ('polls', 0.9559674859046936),\n",
-       " ('beginning', 0.9548994302749634),\n",
-       " ('trigger', 0.954710841178894),\n",
-       " ('voting', 0.9536980390548706),\n",
-       " ('leaving', 0.9534571170806885),\n",
-       " ('united_kingdom', 0.951850414276123),\n",
-       " ('effect', 0.9508790373802185),\n",
-       " ('episode', 0.9508225321769714),\n",
-       " ('disastrous', 0.9489255547523499),\n",
-       " ('guide', 0.9486316442489624),\n",
-       " ('threat', 0.9480876326560974),\n",
-       " ('fifth', 0.947894275188446),\n",
-       " ('entire', 0.9470741748809814),\n",
-       " ('european_union', 0.9470547437667847)]"
+       "[('exacerbate', 0.55687344074249268),\n",
+       " ('divisions', 0.55684494972229004),\n",
+       " ('divisions_between', 0.55172204971313477),\n",
+       " ('destabilizing', 0.54151296615600586),\n",
+       " ('christine_lagarde', 0.53920257091522217),\n",
+       " ('fervor', 0.53260529041290283),\n",
+       " ('exports', 0.53050649166107178),\n",
+       " ('resets', 0.51632332801818848),\n",
+       " ('domino_effect', 0.51083266735076904),\n",
+       " ('economic_consequences', 0.51022613048553467),\n",
+       " ('decide_whether', 0.50888723134994507),\n",
+       " ('whisker', 0.50830203294754028),\n",
+       " ('hinted', 0.50760048627853394),\n",
+       " ('often_referred', 0.5074271559715271),\n",
+       " ('irrevocable', 0.50604122877120972),\n",
+       " ('financial_crisis', 0.50574064254760742),\n",
+       " ('dimon', 0.50302326679229736),\n",
+       " ('shaken', 0.50301027297973633),\n",
+       " ('extra_13', 0.50251781940460205),\n",
+       " ('vehemence', 0.5019722580909729),\n",
+       " ('expressions', 0.50091409683227539),\n",
+       " ('turbulence', 0.49880757927894592),\n",
+       " ('reawakened', 0.49813476204872131),\n",
+       " ('thesis', 0.49788960814476013),\n",
+       " ('public_finances', 0.49393236637115479),\n",
+       " ('u_k', 0.4918968677520752),\n",
+       " ('global_asset', 0.48967161774635315),\n",
+       " ('pluralist', 0.4895605742931366),\n",
+       " ('unevenly', 0.48886188864707947),\n",
+       " ('peace_process', 0.48822429776191711)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,35 +221,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('exit', 0.9635433554649353),\n",
-       " ('united_kingdom', 0.950029194355011),\n",
-       " ('editorial', 0.9489302039146423),\n",
-       " ('issue', 0.9487429261207581),\n",
-       " ('debate', 0.94374018907547),\n",
-       " ('membership', 0.9434525370597839),\n",
-       " ('polls', 0.9401640295982361),\n",
-       " ('bloc', 0.9383368492126465),\n",
-       " ('yield', 0.9378154277801514),\n",
-       " ('voting', 0.9363105893135071),\n",
-       " ('leaving', 0.9331887364387512),\n",
-       " ('european_union', 0.9323802590370178),\n",
-       " ('effect', 0.9316256642341614),\n",
-       " ('northern_ireland', 0.9311627745628357),\n",
-       " ('uncertainty', 0.9290748238563538),\n",
-       " ('results', 0.9272537231445312),\n",
-       " ('fall', 0.9263246059417725),\n",
-       " ('votes', 0.925814151763916),\n",
-       " ('ahead', 0.9249107241630554),\n",
-       " ('trigger', 0.9246854782104492)]"
+       "[('divisions', 0.55103069543838501),\n",
+       " ('christine_lagarde', 0.53009426593780518),\n",
+       " ('exacerbate', 0.52835685014724731),\n",
+       " ('exports', 0.5128856897354126),\n",
+       " ('destabilizing', 0.50886046886444092),\n",
+       " ('domino_effect', 0.50877183675765991),\n",
+       " ('economic_consequences', 0.50775974988937378),\n",
+       " ('hinted', 0.50773352384567261),\n",
+       " ('shaken', 0.5026249885559082),\n",
+       " ('global_asset', 0.50047725439071655),\n",
+       " ('decide_whether', 0.49833822250366211),\n",
+       " ('u_k', 0.49465185403823853),\n",
+       " ('thesis', 0.49111098051071167),\n",
+       " ('constituent', 0.48438006639480591),\n",
+       " ('overshadow', 0.48224928975105286),\n",
+       " ('yellen', 0.47946998476982117),\n",
+       " ('european_union', 0.47554478049278259),\n",
+       " ('public_finances', 0.47536560893058777),\n",
+       " ('irrevocable', 0.47467297315597534),\n",
+       " ('affirmative', 0.47412505745887756),\n",
+       " ('expressions', 0.47216367721557617),\n",
+       " ('eu', 0.47048455476760864),\n",
+       " ('international_monetary', 0.46989136934280396),\n",
+       " ('pluralist', 0.46540179848670959),\n",
+       " ('stability', 0.46425351500511169),\n",
+       " ('imf', 0.46118539571762085),\n",
+       " ('subsidies', 0.46027854084968567),\n",
+       " ('prompt', 0.45853078365325928),\n",
+       " ('predict', 0.45810851454734802),\n",
+       " ('guide', 0.45676258206367493)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,35 +272,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('united_kingdom', 0.9607036113739014),\n",
-       " ('european_union', 0.9542569518089294),\n",
-       " ('membership', 0.9458673596382141),\n",
-       " ('exit', 0.9436300992965698),\n",
-       " ('stays', 0.937843382358551),\n",
-       " ('bloc', 0.9376928210258484),\n",
-       " ('polls', 0.9346342086791992),\n",
-       " ('uk', 0.9335870742797852),\n",
-       " ('brexit', 0.9315703511238098),\n",
-       " ('results', 0.9287354350090027),\n",
-       " ('debate', 0.9286594390869141),\n",
-       " ('votes', 0.9257169961929321),\n",
-       " ('voting', 0.9240907430648804),\n",
-       " ('e_u', 0.9137635827064514),\n",
-       " ('result', 0.9104113578796387),\n",
-       " ('vote', 0.9102939963340759),\n",
-       " ('u_k', 0.91009122133255),\n",
-       " ('sunderland', 0.9095768928527832),\n",
-       " ('camp', 0.9088003635406494),\n",
-       " ('leave', 0.9049204587936401)]"
+       "[('divisions', 0.54834765195846558),\n",
+       " ('exports', 0.51314806938171387),\n",
+       " ('destabilizing', 0.50320160388946533),\n",
+       " ('u_k', 0.50249898433685303),\n",
+       " ('decide_whether', 0.49557679891586304),\n",
+       " ('thesis', 0.4898625910282135),\n",
+       " ('irrevocable', 0.485107421875),\n",
+       " ('european_union', 0.4812832772731781),\n",
+       " ('eu', 0.4784645140171051),\n",
+       " ('overshadow', 0.4760470986366272),\n",
+       " ('predict', 0.47083747386932373),\n",
+       " ('public_finances', 0.46850800514221191),\n",
+       " ('stability', 0.46766901016235352),\n",
+       " ('geography', 0.45891055464744568),\n",
+       " ('expressions', 0.4588036835193634),\n",
+       " ('guide', 0.45864647626876831),\n",
+       " ('britons', 0.45316052436828613),\n",
+       " ('uncertainty', 0.45072287321090698),\n",
+       " ('weighed', 0.44949376583099365),\n",
+       " ('very_difficult', 0.44934865832328796),\n",
+       " ('managing_director', 0.448749840259552),\n",
+       " ('easiest', 0.44711682200431824),\n",
+       " ('prompt', 0.44538190960884094),\n",
+       " ('proponents', 0.44342350959777832),\n",
+       " ('sounded', 0.44070020318031311),\n",
+       " ('independence_party', 0.43911093473434448),\n",
+       " ('brexit_vote', 0.43610042333602905),\n",
+       " ('regions', 0.43165919184684753),\n",
+       " ('worries', 0.42495685815811157),\n",
+       " ('leave', 0.42449331283569336)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,35 +323,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('united_kingdom', 0.9509780406951904),\n",
-       " ('exit', 0.950204074382782),\n",
-       " ('european_union', 0.9462379813194275),\n",
-       " ('membership', 0.9431858062744141),\n",
-       " ('stays', 0.9402644634246826),\n",
-       " ('brexit', 0.9331012964248657),\n",
-       " ('uk', 0.9326643347740173),\n",
-       " ('e_u', 0.9260918498039246),\n",
-       " ('polls', 0.9248156547546387),\n",
-       " ('results', 0.9226175546646118),\n",
-       " ('bloc', 0.9225506782531738),\n",
-       " ('swung', 0.9222936034202576),\n",
-       " ('outcome', 0.9222410917282104),\n",
-       " ('debate', 0.9181690216064453),\n",
-       " ('vote', 0.9171704053878784),\n",
-       " ('voting', 0.9138851761817932),\n",
-       " ('victory', 0.9126725196838379),\n",
-       " ('lancaster', 0.9111326932907104),\n",
-       " ('issue', 0.9072451591491699),\n",
-       " ('u_k', 0.9063650965690613)]"
+       "[('divisions', 0.5353427529335022),\n",
+       " ('destabilizing', 0.50838494300842285),\n",
+       " ('u_k', 0.4983193576335907),\n",
+       " ('exports', 0.49707752466201782),\n",
+       " ('decide_whether', 0.48437595367431641),\n",
+       " ('thesis', 0.48241400718688965),\n",
+       " ('european_union', 0.47909626364707947),\n",
+       " ('eu', 0.47787889838218689),\n",
+       " ('predict', 0.46487510204315186),\n",
+       " ('stability', 0.46320337057113647),\n",
+       " ('irrevocable', 0.46066400408744812),\n",
+       " ('britons', 0.46059855818748474),\n",
+       " ('uncertainty', 0.45837438106536865),\n",
+       " ('overshadow', 0.45458045601844788),\n",
+       " ('expressions', 0.45442155003547668),\n",
+       " ('guide', 0.45415183901786804),\n",
+       " ('very_difficult', 0.44915539026260376),\n",
+       " ('prompt', 0.44907116889953613),\n",
+       " ('weighed', 0.4475952684879303),\n",
+       " ('independence_party', 0.44346046447753906),\n",
+       " ('managing_director', 0.44171822071075439),\n",
+       " ('geography', 0.44076600670814514),\n",
+       " ('brexit_vote', 0.43648886680603027),\n",
+       " ('easiest', 0.43518704175949097),\n",
+       " ('regions', 0.43129399418830872),\n",
+       " ('exit', 0.42965435981750488),\n",
+       " ('popularity', 0.42455148696899414),\n",
+       " ('worries', 0.42383015155792236),\n",
+       " ('sounded', 0.42358380556106567),\n",
+       " ('labour', 0.42161247134208679)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
